libraries for sound

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,5 +20,8 @@ lib_deps =
 	https://github.com/adafruit/Adafruit-GFX-Library
 	https://github.com/bblanchon/ArduinoJson.git
 	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
-    ESPAsyncTCP-esphome
-    AsyncTCP-esphome
+	ESPAsyncTCP-esphome
+	AsyncTCP-esphome
+	earlephilhower/ESP8266Audio@^1.9.2
+	HTTPClient
+	WiFiClientSecure
