--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ttgo-t-watch]
+[env]
 platform = espressif32
 board = ttgo-t-watch
 framework = arduino
-upload_port = /dev/ttyUSB0
 monitor_speed = 115200
 lib_deps = 
 	https://github.com/Xinyuan-LilyGO/TTGO_TWatch_Library
@@ -25,3 +24,9 @@ lib_deps =
 	earlephilhower/ESP8266Audio@^1.9.2
 	HTTPClient
 	WiFiClientSecure
+
+
+[env:ttgo-t-watch]
+upload_port = /dev/ttyUSB0
+
+[env:ttgo-t-watch-macos]
