Appended linux to the linux-env

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,7 +26,7 @@ lib_deps =
 	WiFiClientSecure
 
 
-[env:ttgo-t-watch]
+[env:ttgo-t-watch-linux]
 upload_port = /dev/ttyUSB0
 
 [env:ttgo-t-watch-macos]
