Added how-to for mac

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,11 @@ lib_deps =
 [env:ttgo-t-watch-linux]
 upload_port = /dev/ttyUSB0
 
-[env:ttgo-t-watch-macos]
-
 [env:ttgo-t-watch-windows]
 upload_port = COM4
+
+[env:ttgo-t-watch-macos]
+; On the Mac, set the environment variable PLATFORMIO_UPLOAD_PORT 
+; to your device port, for example as follows:
+;
+;          launchctl setenv PLATFORMIO_UPLOAD_PORT /dev/tty.usbserial-0233D4FC
