--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,11 @@ lib_deps =
 
 [env:ttgo-t-watch-linux]
 upload_port = /dev/ttyUSB0
+upload_speed = 2000000
+
+[env:ttgo-t-watch-ota]
+upload_protocol = espota
+upload_port = twatch
 
 [env:ttgo-t-watch-windows]
 upload_port = COM4
