Fixed Adafruit BusIO Version number| most recent version does not compile

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	https://github.com/sebug/TTGO_TWatch_Library
-	adafruit/Adafruit BusIO @ ^1.6.0
+	adafruit/Adafruit BusIO @ 1.9.6
 	https://github.com/adafruit/Adafruit-GFX-Library
 	https://github.com/bblanchon/ArduinoJson.git
 	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
