--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
-platform = espressif32
+platform = https://github.com/platformio/platform-espressif32    ;espressif32
 board = ttgo-t-watch
 framework = arduino
 monitor_speed = 115200
