Working ArduinoJSON library

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,16 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env]
+[env:default]
 platform = espressif32
 board = ttgo-t-watch
 framework = arduino
 monitor_speed = 115200
+upload_speed = 2000000
+
 lib_deps = 
 	https://github.com/sebug/TTGO_TWatch_Library
 	adafruit/Adafruit BusIO @ 1.9.6
 	https://github.com/adafruit/Adafruit-GFX-Library
-	https://github.com/bblanchon/ArduinoJson.git
+	bblanchon/ArduinoJson@^6.19.1
 	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
 	ESPAsyncTCP-esphome
 	AsyncTCP-esphome
@@ -26,19 +28,3 @@ lib_deps =
 	WiFiClientSecure
 
 
-[env:ttgo-t-watch-linux]
-upload_port = /dev/ttyUSB0
-upload_speed = 2000000
-
-[env:ttgo-t-watch-ota]
-upload_protocol = espota
-upload_port = twatch
-
-[env:ttgo-t-watch-windows]
-upload_port = COM4
-
-[env:ttgo-t-watch-macos]
-; On the Mac, set the environment variable PLATFORMIO_UPLOAD_PORT 
-; to your device port, for example as follows:
-;
-;          launchctl setenv PLATFORMIO_UPLOAD_PORT /dev/tty.usbserial-0233D4FC
